# sc-keymap-rs

./: .gitignore  Cargo.toml  README.md  output_R.html
.github/workflows/: lint_and_test.yml  release.yml
bindings/: VKBsim Gladiator EVO  L   profile v9.cfg  VKBsim Gladiator EVO  L   profile.cfg  VKBsim Gladiator EVO  R   profile v6.cfg  VKBsim Gladiator EVO  R   profile v9.cfg  VKBsim Gladiator EVO  R   profile.cfg  layout_vkb_exported.xml  layout_vkb_v6_exported.xml  sc_duplicates_to_ignore.csv  vkb_report_L.fp3  vkb_report_L.rtf  vkb_report_R.fp3  vkb_report_R.rtf  vkb_template_params.json  vkb_user_provided_data.csv
data/: vkb_template_params_left.json  vkb_template_params_right.json  vkb_user_provided_data.csv
src/: button.rs  edit.rs  html.rs  html2.rs  html_gen.rs  lib.rs  main.rs  merge.rs  parse_keybind_xml.rs  parse_vkb_report_xml.rs  pdf_form.rs  pdf_parse.rs  svg_parse.rs  template_gen.rs
src/ARCHIVE/: svg_parse.rs
src/sc/: mod.rs  parse_keybind_xml.rs
src/vkb/: mod.rs  vkb_button.rs  vkb_xml.rs
tests/data/: layout_exported_simplified.xml  layout_vkb_exported.xml  vkb_report_L.fp3  vkb_report_simplified.fp3  vkb_report_test_b2_merging.fp3
