[package]
name = "sc-keymap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
shellexpand = "3.0"
# lopdf = { version = "0.30.0", features = ["serde"] }
thiserror = "1.0"
# pdf = "0.8.1"
quick-xml = { version = "0.31", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
# rayon = "1.7.0"
env_logger = { version = "0.11.0", default-features = false }
scraper = "0.18.0"
log = "0.4.17"
resvg = "0.38.0"
csv = "1.3.0"
image = "0.24.8"
imageproc = "0.23.0"
rusttype = "0.9.3"
# pdf_form: not updated; and apparently does not work with recent "lopdf"
# pdf_form = { git = "https://github.com/jsandler18/pdf_form.git", version = "0.4.0" }
